# skillhub

./: .gitignore
cli/: pyproject.toml
cli/skillhub/: cli.py
cli/skillhub/commands/: build.py  info.py  init.py  list_cmd.py  pull.py  push.py  setup_cmd.py
cli/skillhub/utils/: api.py  config.py  packaging.py  platform.py
cli/tests/: conftest.py  test_api.py  test_build.py  test_cli.py  test_config.py  test_info.py  test_init.py  test_list.py  test_packaging.py  test_platform.py  test_pull.py  test_push.py  test_setup.py
docs/superpowers/plans/: 2026-04-30-skill-contents-info.md
docs/superpowers/specs/: 2026-04-30-drawer-multiselect-design.md  2026-04-30-skill-contents-info-design.md  2026-04-30-skills-web-app-design.md
server/: .env.template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: database.py  main.py
server/app/routers/: admin.py  packages.py  ui.py
server/app/static/: style.css
server/app/templates/: admin.html  base.html
server/app/templates/partials/: skill_card.html  skill_detail.html  skill_grid.html  skill_version_contents.html
server/tests/: conftest.py  test_packages.py  test_ui.py
