[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.0",
    "packaging>=24.0",
    "pytest>=8.0.0",
    "python-multipart>=0.0.17",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]
